--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE>
 <html>
     <head>
         <title>
@@ -7,6 +8,6 @@
     <body>
         <h1>Welcome</h1>
         <p>This is my first app.</p>
-        
+        <p>LOVE TO CODE.</p>
     </body>
 </html>
